Fix bug where particles overflowed off navbar

--- a/css/welcome-message.css
+++ b/css/welcome-message.css
@@ -59,7 +59,7 @@
 }
 
 #particles-js .particles-js-canvas-el {
-    max-height: 55vh;
+    max-height: 50vh;
 }
 
 @media screen and (max-width: 500px) {
